# house-price-prediction

./: .gitignore  PROJECT_CHECKLIST.md  README.md  pyproject.toml  requirements.txt
.github/workflows/: tests.yml
app/: README.md  streamlit_app.py
data/: README.md
models/: README.md
notebooks/: 01_data_exploration.ipynb  02_data_cleaning.ipynb  03_model_training.ipynb
reports/: README.md
scripts/: prepare_data.py  train_model.py
src/house_price_prediction/: __init__.py  config.py  data.py  model.py
tests/: test_data.py  test_model.py
